fixed whitespace is landscape

--- a/style.css
+++ b/style.css
@@ -7,12 +7,7 @@ body {
     margin-bottom: 0px;
     overflow-x: hidden;
 }
-@media (max-width: 767px){
-  .wrapper{
-  padding-right: 0px;
-  padding-left: 0px;
-  }
-}
+
 @media screen and (orientation: portrait){
   #wrapper{
     width: 100%;
